--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -84,7 +84,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="heading">Cộng đồng yêu thích Google+ +</div>
                 <div class="body">
-                    <a href="<%$smarty.const.ACW_BASE_URL%>"><img alt="gg" src="http://tentenwordpress2.top/wp-content/uploads/2016/12/quang-cao-11.jpg"></a>
+                    <a href="<%$banner_16.link_page%>"><img alt="gg" src="<%$smarty.const.ACW_BASE_URL%><%$banner_16.img_path%>"></a>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
@@ -110,7 +110,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="heading">Khuyến mãi hot</div>
                 <div class="body">
-                    <a href="<%$smarty.const.ACW_BASE_URL%>"><img alt="img2" src="http://tentenwordpress2.top/wp-content/uploads/2016/12/quang-cao-8.jpg"></a>
+                    <a href="<%$banner_17.link_page%>"><img alt="img2" src="<%$smarty.const.ACW_BASE_URL%><%$banner_17.img_path%>"></a>
                 </div>
             </div>
         </div>
