--- a/app/template/fontend/template1/include/left.html
+++ b/app/template/fontend/template1/include/left.html
@@ -27,26 +27,26 @@
     <div class="panel panel-hotline">
             <div class="panel-body">
                 <div class="mua-nhanh">HOTLINE</div>
-                <div class="phone">0868 191 666</div>
-                <a href="#"><div class="mua-nhanh2">Chuyên cung cấp sỉ</div></a>
-                <div class="phone2">0868 191 666 </div>
+                <div class="phone"><%$comp_phone%></div>
+                <!-- <a href="#"><div class="mua-nhanh2">Chuyên cung cấp sỉ</div></a> -->
+                <div class="phone2"><%$comp_phone%> </div>
             </div>
     </div>
     <div class="panel form-face">
         <div class="fb-page" data-href="https://www.facebook.com/NDNoithatkhachsan/" data-tabs="timeline" data-height="350" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/NDNoithatkhachsan/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/NDNoithatkhachsan/">Danco Hotel Supplies - Sản phẩm vải khách sạn</a></blockquote></div>
     </div>
     <div class="panel banner-sidebar">
-            <div class="panel-body">
-                <a href="<%$smarty.const.ACW_BASE_URL%>"><img alt="QC1" src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/quang-cao-10.jpg"></a>
-            </div>
+        <div class="panel-body">
+                <a href="<%$banner_15.link_page%>"><img alt="QC1" src="<%$smarty.const.ACW_BASE_URL%><%$banner_15.img_path%>"></a>
+        </div>
     </div>
     <div class="panel panel-icon lien-he-nhanh">
             <div class="panel-heading">
                 <span>Liên hệ nhanh</span>
             </div>
             <div class="panel-body">
-                <p class="phone"><span>0868 191 666 - 0868 565 181</span></p>
-                <p class="email"> <span><a href="https://mail.google.com/mail" target="_blank">DANCO868191666@gmail.com</a></span></p>
+                <p class="phone"><span><%$comp_phone%> - <%$comp_phone_2%></span></p>
+                <p class="email"> <span><a href="https://mail.google.com/mail" target="_blank"><%$comp_email%> </a></span></p>
             </div>
     </div>
     <div class="panel panel-cam-ket">
