--- a/app/template/backend/include/left.html
+++ b/app/template/backend/include/left.html
@@ -53,12 +53,16 @@
                       <li><a href="<%$smarty.const.ACW_BASE_URL%>news">Tin tức</a></li>
                     </ul>
                   </li>
+                  <li><a><i class="fa fa-sliders"></i> Slide - Banner <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="<%$smarty.const.ACW_BASE_URL%>slides/list/0">Slide</a></li>
+                      <li><a href="<%$smarty.const.ACW_BASE_URL%>slides/list/1">Banner</a></li>
+                    </ul>
+                  </li>
                   <li><a href="<%$smarty.const.ACW_BASE_URL%>user"><i class="fa fa-group"></i> Tài khoản <span class="fa"></span></a></li>                  
                   <li><a><i class="fa fa-gear"></i> Cài đặt <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="<%$smarty.const.ACW_BASE_URL%>define/list/1">Thông tin công ty</a></li>
-                      <li><a href="<%$smarty.const.ACW_BASE_URL%>slides/list/0">Slide</a></li>
-                      <li><a href="<%$smarty.const.ACW_BASE_URL%>slides/list/1">Banner</a></li>
+                      <li><a href="<%$smarty.const.ACW_BASE_URL%>define/list/1">Thông tin công ty</a></li>                      
                       <li><a href="<%$smarty.const.ACW_BASE_URL%>define/list/2">Fan page</a></li>
                       <li><a href="<%$smarty.const.ACW_BASE_URL%>define/list/3">Thông tin website</a></li>
                       <!--<li><a href="<%$smarty.const.ACW_BASE_URL%>define/logo">Logo</a></li>-->
