--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -18,11 +18,11 @@
                         </div>
          </div>                                
 </div>
-<div class="row">
+<!-- <div class="row">
    <div class="container">
       <img style="width: 100%;margin-top: 10px;" src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/quang-cao-5-1.jpg">
    </div>
-</div>
+</div> -->
 <!-- <div class="row">
    <div class="container">
       <div class="heading heading-section">
