fin danh muc tin tuc

--- a/app/template/backend/category/edit.html
+++ b/app/template/backend/category/edit.html
@@ -44,6 +44,7 @@
                           <input type="text" id="ctg_name" required="required" name="ctg_name" class="form-control col-md-7 col-xs-12" value="<%$ctg_name%>">
                           <input type="hidden"  name="ctg_id" value="<%$ctg_id%>">
                           <input type="hidden"  name="ctg_level" value="<%$ctg_level%>">
+                          <input type="hidden"  name="news_flg" value="<%$news_flg%>">
                         </div>
                       </div>
                       
