--- a/app/template/backend/include/left.html
+++ b/app/template/backend/include/left.html
@@ -41,15 +41,16 @@
                   </li>                  
                   <li><a ><i class="fa fa-cube"></i>Danh mục - Sản Phẩm <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="<%$smarty.const.ACW_BASE_URL%>category/list/1">Danh mục cấp 1</a></li>
-                      <li><a href="<%$smarty.const.ACW_BASE_URL%>category/list/2">Danh mục cấp 2</a></li>
+                      <li><a href="<%$smarty.const.ACW_BASE_URL%>category/list/1/0">Danh mục cấp 1</a></li>
+                      <li><a href="<%$smarty.const.ACW_BASE_URL%>category/list/2/0">Danh mục cấp 2</a></li>
                       <li><a href="<%$smarty.const.ACW_BASE_URL%>product">Sản phẩm</a></li>                      
                     </ul>
                   </li>
                   <li><a href="<%$smarty.const.ACW_BASE_URL%>page"><i class="fa fa-file-powerpoint-o"></i> Trang <span class="fa"></span></a></li>
                   <li><a><i class="fa fa-newspaper-o"></i> Tin tức <span class="fa fa-chevron-down"></span></a>
                   	<ul class="nav child_menu">
-                      <li><a href="<%$smarty.const.ACW_BASE_URL%>category/ctgnews">Danh mục tin </a></li>
+                      <li><a href="<%$smarty.const.ACW_BASE_URL%>category/list/1/1">Danh mục tin cấp 1</a></li>
+                      <li><a href="<%$smarty.const.ACW_BASE_URL%>category/list/2/1">Danh mục tin cấp 2</a></li>
                       <li><a href="<%$smarty.const.ACW_BASE_URL%>news">Tin tức</a></li>
                     </ul>
                   </li>
