--- a/app/template/fontend/template1/index.html
+++ b/app/template/fontend/template1/index.html
@@ -1,6 +1,10 @@
 <html>
    <head>      
       <%include 'include/header.html'%>
+      <meta property="og:site_name" content="dancovietnam.vn">
+      <meta property="og:title" content="<%$web_title%>">
+      <meta property="og:description" content="<%$web_des%>">  
+      <meta property="og:image" content="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png"> 
    </head>
    <body>
       <%include 'include/menu.html'%>
