--- a/app/template/fontend/template1/include/menu.html
+++ b/app/template/fontend/template1/include/menu.html
@@ -86,7 +86,9 @@
                   <%/if%> 			<%/foreach%>
                </ul>
             </div>
+            <button class="btn_menu_mobi">
             <span data-toggle="collapse" data-target="#nav-menu" class="glyphicon glyphicon-menu-hamburger menu_mobi"></span>
+            </button>
             <div id="nav-menu" class="collapse">
                <ul class="vertical_bar">
                   <%foreach $menus as $key=>$item%>                                         
