--- a/shared/template1/css/style.css
+++ b/shared/template1/css/style.css
@@ -3,6 +3,8 @@ body {
     color: #000000;
     font-size: 12;
     font-family: Tahoma, Times New Roman, Arial;
+    margin: auto;
+    overflow-x: hidden;
 }
 img{
   max-width: 100%;
@@ -199,6 +201,11 @@ img.logo{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.btn_menu_mobi{
+  display: none;
+  background: transparent;
+  border: none;
 }
 .menu_mobi {
     color: #fff;
@@ -1309,7 +1316,7 @@ transition: all 500ms ease-out 0s;
 }
 
 @media (max-width: 768px){
-    .menu_mobi {
+    .menu_mobi,.btn_menu_mobi {
         display: block;
     }
     #menu_top,.nav_top{
@@ -1320,7 +1327,7 @@ transition: all 500ms ease-out 0s;
     }
 }
 @media (min-width: 768px){
-    .menu_mobi {
+    .menu_mobi,.btn_menu_mobi {
         display: none;
     }
     .nav_top{
