--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -182,10 +182,14 @@
             </div>                       
          </div>
       </div>
-      <div id="cfacebook" style="right:103px;">
-        <a href="javascript:;" class="chat_fb" onclick="return:false;"><i class="fa fa-facebook-square"></i> Hỗ trợ trực tuyến</a>
-        <div class="fchat">
-        <div class="fb-page" data-tabs="messages" data-href="<%$facebook_page%>" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"></div>
+      <div class="row">
+        <div class="container">
+          <div id="cfacebook" style="float: right;">
+            <a href="javascript:;" class="chat_fb" onclick="return:false;"><i class="fa fa-facebook-square"></i> Hỗ trợ trực tuyến</a>
+            <div class="fchat">
+            <div class="fb-page" data-tabs="messages" data-href="<%$facebook_page%>" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
