--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -82,14 +82,14 @@
       <hr>
    <div class="row">
             <div class="col-md-4 col-sm-4">
-                <div class="heading">Cộng đồng yêu thích Google+ +</div>
+                <div class="heading"><%$title_1%></div>
                 <div class="body">
                     <a href="<%$banner_16.link_page%>"><img alt="gg" src="<%$smarty.const.ACW_BASE_URL%><%$banner_16.img_path%>"></a>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="heading">
-                    <span>Tin tức</span>
+                    <span><%$title_2%></span>
                 </div>
                 <%assign var="tinmois" value=Tintuc_model::tintuc_moi()%>  
                 <div class="body media-product">
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="heading">Khuyến mãi hot</div>
+                <div class="heading"><%$title_3%></div>
                 <div class="body">
                     <a href="<%$banner_17.link_page%>"><img alt="img2" src="<%$smarty.const.ACW_BASE_URL%><%$banner_17.img_path%>"></a>
                 </div>
