--- a/app/template/backend/include/left.html
+++ b/app/template/backend/include/left.html
@@ -66,6 +66,7 @@
                       <li><a href="<%$smarty.const.ACW_BASE_URL%>define/list/1">Thông tin công ty</a></li>                      
                       <li><a href="<%$smarty.const.ACW_BASE_URL%>define/list/2">Fan page</a></li>
                       <li><a href="<%$smarty.const.ACW_BASE_URL%>define/list/3">Thông tin website</a></li>
+                      <li><a href="<%$smarty.const.ACW_BASE_URL%>define/list/4">Khác</a></li>
                       <!--<li><a href="<%$smarty.const.ACW_BASE_URL%>define/logo">Logo</a></li>-->
                       <!-- <li><a href="<%$smarty.const.ACW_BASE_URL%>define/email">Email nhận thông báo</a></li> -->                  
                       <!--<li><a href="tables_dynamic.html">Message</a></li>-->
