title and page danh muc

--- a/app/template/fontend/template1/page.html
+++ b/app/template/fontend/template1/page.html
@@ -1,6 +1,11 @@
 <html>
    <head>      
       <%include 'include/header.html'%>
+      <meta property="og:site_name" content="dancovietnam.vn">
+      <meta property="og:title" content="<%$page_name%>">
+      <meta property="og:description" content="<%$web_des%>">  
+      <meta property="og:image" content="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png"> 
+      <title><%$page_name%></title>
    </head>
    <body>
       <%include 'include/menu.html'%>
