--- a/app/template/fontend/template1/danhmuc/list.html
+++ b/app/template/fontend/template1/danhmuc/list.html
@@ -38,3 +38,14 @@
               
    </div>
 </section>
+<%if $total_page > 1%>
+<div class="row">
+   <div class="col-md-12 col-sm-12 col-xs-12" style="display: flex;justify-content: center;">
+      <ul class="pagination">
+      <%for $i=1; $i<= $total_page;$i++ %> 
+        <li <%if $page==$i%>class="active"<%/if%>><a href="<%$smarty.const.ACW_BASE_URL%>danhmuc/ds/<%$ctg_no%>?page=<%$i%>"><%$i%></a></li>
+      <%/for%>       
+      </ul>
+   </div>
+</div>
+<%/if%>
