--- a/app/template/fontend/template1/index.html
+++ b/app/template/fontend/template1/index.html
@@ -5,6 +5,7 @@
       <meta property="og:title" content="<%$web_title%>">
       <meta property="og:description" content="<%$web_des%>">  
       <meta property="og:image" content="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png"> 
+      <title><%$web_title%></title>
    </head>
    <body>
       <%include 'include/menu.html'%>
