--- a/app/template/fontend/template1/cart.html
+++ b/app/template/fontend/template1/cart.html
@@ -3,6 +3,11 @@
       <%include 'include/header.html'%>
       <link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/chitiet.css" rel="stylesheet" type="text/css">
       <link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/woocommerce.css" rel="stylesheet" type="text/css">
+      <meta property="og:site_name" content="dancovietnam.vn">
+      <meta property="og:title" content="<%$web_title%>">
+      <meta property="og:description" content="<%$web_des%>">  
+      <meta property="og:image" content="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png"> 
+      <title>Thanh toán</title>
    </head>
    <body>
       <%include 'include/menu.html'%>
