--- a/shared/template1/css/style.css
+++ b/shared/template1/css/style.css
@@ -4,10 +4,10 @@ body {
     font-size: 12;
     font-family: Tahoma, Times New Roman, Arial;
     margin: auto;
-    overflow-x: hidden;
+   /* overflow-x: hidden;
     overflow-y: scroll;
     position: absolute;
-    -webkit-overflow-scrolling:touch;
+    -webkit-overflow-scrolling:touch;*/
     height: 100%;
     width: 100%
 }
@@ -426,15 +426,13 @@ ul.vertical_bar li a:hover {
 
 }
 
-.panel-danh-muc .list-group > li:hover > ul {
+/*.panel-danh-muc .list-group > li:hover > ul {
 
   display: block;
 
-}
+}*/
 /*.mega-menu{
-position: absolute;
-top: 0px;
-left: 100%;
+display: block;
 z-index: 9999;
 background-color: #f8f8f8;
 visibility: hidden;
@@ -449,7 +447,7 @@ min-width: 200px;
 
 .panel-danh-muc .list-group ul a {
 
-  background-repeat: no-repeat;
+  menu-lv1-repeat: no-repeat;
 
   background-position: top 15px left 10px;
 
@@ -493,18 +491,19 @@ min-width: 200px;
 }
 
 .panel-danh-muc a {
-
   color: #000;
-
   padding: 10px 12px;
-
   display: block;
-
   position: relative;
-
   margin-bottom: -1px;
   text-decoration: none;
-
+  margin-left: 20px;
+}
+ul.list-sup-lv2 {
+    border-top: 1px solid #046743;
+}
+.list-sup-lv2 > .menu-lv2 > a{
+   margin-left: 30px;
 }
 .mega-menu > .list-sup-lv2 > .menu-lv2
 { 
@@ -1415,4 +1414,19 @@ transition: all 500ms ease-out 0s;
 .list-inline > li
 {
   padding-right: 0;
+}
+
+.fa-plus-circle{
+  content: "\f055";
+  font-family: 'FontAwesome';
+  position: absolute;
+  color: #047643;   
+  font-size: 18px; 
+}
+.fa-minus-circle{
+  content: "\f056";
+  font-family: 'FontAwesome';
+  position: absolute;
+  color: #047643;   
+  font-size: 18px; 
 }
