fix trang va sanpham

--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -143,24 +143,24 @@
             <div class="col-md-3 col-sm-3">
                <div class="title">Giới thiệu</div>
                <ul class="list-unstyled">
-                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/gioi-thieu">Về Danco</a></li>
-                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/tuyen-dung">Tuyển dụng</a></li>
-                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/lien-he">Liên hệ</a></li>
+                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_1%>">Về Danco</a></li>
+                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_4%>">Tuyển dụng</a></li>
+                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_3%>">Liên hệ</a></li>
                </ul>
             </div>
             <div class="col-md-3 col-sm-3">
                <div class="title">Chính sách chung</div>
                <ul class="list-unstyled">
-                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/chinh-sach-giao-hang">Chính sách giao hàng</a></li>
-                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/chinh-sach-doi-tra-hang">Chính sách đổi trả hàng</a></li>
-                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/chinh-sach-bao-hanh">Chính sách bảo hành</a></li>
+                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_5%>">Chính sách giao hàng</a></li>
+                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_6%>">Chính sách đổi trả hàng</a></li>
+                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_7%>">Chính sách bảo hành</a></li>
                </ul>
             </div>
             <div class="col-md-3 col-sm-3">
                <div class="title">Hướng dẫn mua hàng</div>
                <ul class="list-unstyled">
-                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/phuong-thuc-van-chuyen">Phương thức vận chuyển</a></li>
-                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/phuong-thuc-thanh-toan">Phương thức thanh toán</a></li>
+                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_8%>">Phương thức vận chuyển</a></li>
+                  <li><a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_9%>">Phương thức thanh toán</a></li>
                </ul>
             </div>
             <div class="col-md-3 col-sm-3">
