--- a/app/template/fontend/template1/include/menu.html
+++ b/app/template/fontend/template1/include/menu.html
@@ -21,13 +21,13 @@
                        <a href="<%$smarty.const.ACW_BASE_URL%>"> Trang chủ</a>
                     </li>
                     <li>
-                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/gioi-thieu">Giới thiệu</a>
+                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_1%>aa">Giới thiệu</a>
                     </li>
                     <li>
-                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/lien-he">Liên hệ</a>
+                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_3%>">Liên hệ</a>
                     </li>
                     <li>
-                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/tuyen-dung">Tuyển dụng</a>
+                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_4%>">Tuyển dụng</a>
                     </li>
                  </ul>
                           
