--- a/app/template/fontend/template1/sanpham.html
+++ b/app/template/fontend/template1/sanpham.html
@@ -6,9 +6,9 @@
       <link rel="stylesheet" href="<%$smarty.const.ACW_BASE_URL%>/froala/css/froala_style.css">
       <meta property="og:url"           content="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$pro.pro_no%>" />
       <meta property="og:image" content="<%$smarty.const.ACW_BASE_URL_DATA%><%$imglist[0]['img_path']%>">
-      <meta property="og:site_name" content="<%$pro.pro_name%>">
+      <meta property="og:site_name" content="dancovietnam.vn">
       <meta property="og:title" content="<%$pro.pro_name%>">
-      <meta property="og:description" content="<%$pro.content%>">    
+      <meta property="og:description" content="<%$web_des%>">    
    </head>
    <body>
       <%include 'include/menu.html'%>
