--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -170,13 +170,13 @@
                      <a href="<%$facebook_page%>" target="_blank" class="sh-facebook"><span class="icon"></span>Facebook</a>
                   </li>
                   <li>
-                     <a href="" target="_blank" class="sh-tiwwter"><span class="icon"></span>Twitter</a>
+                     <a href="<%$tweet_page%>" target="_blank" class="sh-tiwwter"><span class="icon"></span>Twitter</a>
                   </li>
                   <li>
-                     <a href="" target="_blank" class="sh-google"><span class="icon"></span>Google +</a>
+                     <a href="<%$google_page%>" target="_blank" class="sh-google"><span class="icon"></span>Google +</a>
                   </li>
                   <li>
-                     <a href="" target="_blank" class="sh-youtube"><span class="icon"></span>Youtube</a>
+                     <a href="<%$youtu_page%>" target="_blank" class="sh-youtube"><span class="icon"></span>Youtube</a>
                   </li>
                </ul>
             </div>                       
