--- a/app/template/fontend/template1/include/menu.html
+++ b/app/template/fontend/template1/include/menu.html
@@ -21,7 +21,7 @@
                        <a href="<%$smarty.const.ACW_BASE_URL%>"> Trang chủ</a>
                     </li>
                     <li>
-                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_1%>aa">Giới thiệu</a>
+                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_1%>">Giới thiệu</a>
                     </li>
                     <li>
                        <a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_3%>">Liên hệ</a>
