--- a/app/template/fontend/template1/include/left.html
+++ b/app/template/fontend/template1/include/left.html
@@ -11,8 +11,8 @@
                         <%foreach $menusleft as $item%>
                            <li class="list-group-item menu-lv1">
                               
-                                  <button  class="item_parent_menu" style="background: transparent; border: none; margin-top: 5px;margin-right: 10px" ><span class="<%if $item.cnt_child > 0%>fa-plus-circle<%else%>fa-minus-circle<%/if%> " ></span>
-                                  </button>
+                                    <button class="<%if $item.cnt_child > 0%>fa-plus-circle<%else%>fa-minus-circle<%/if%> item_parent_menu" style="background: transparent; border: none; margin-top: 5px"></button>
+                              
                               <a href="<%$smarty.const.ACW_BASE_URL%>danhmuc/ds/<%$item.ctg_no%>" title="<%$item.ctg_name%>" ><%$item.ctg_name%></a>
                               <%if $item.cnt_child > 0%>
                               <!-- <div class="mega-menu"> -->
@@ -53,7 +53,7 @@
     </div>
     <div class="panel panel-cam-ket">
             <div class="panel-heading">
-                <span>Cam Kết với khách hàng</span>
+                <span>Cam kết với khách hàng</span>
             </div>
             <div class="panel-body">
                 <ul>
