sua page danh sach tin

--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -182,7 +182,7 @@
             </div>                       
          </div>
       </div>
-       <!-- <div class="row">
+       <div class="row">
         <div class="container">
           <div id="cfacebook" style="float: right;">
             <a href="javascript:;" class="chat_fb" onclick="return:false;"><i class="fa fa-facebook-square"></i> Hỗ trợ trực tuyến</a>
@@ -191,7 +191,7 @@
             </div>
           </div>
         </div>
-      </div>  -->
+      </div> 
     </div>
 </div>
  
