--- a/app/template/fontend/template1/include/menu.html
+++ b/app/template/fontend/template1/include/menu.html
@@ -27,7 +27,7 @@
                        <a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_3%>">Liên hệ</a>
                     </li>
                     <li>
-                       <a href="<%$smarty.const.ACW_BASE_URL%>page/v/<%$page_4%>">Tuyển dụng</a>
+                       <a href="<%$smarty.const.ACW_BASE_URL%>tintuc/ds/tuyen-dung">Tuyển dụng</a>
                     </li>
                  </ul>
                           
