fix, mobile ko nhập dc text

--- a/app/template/fontend/template1/cart.html
+++ b/app/template/fontend/template1/cart.html
@@ -40,7 +40,7 @@
                      </form>
                      <form name="checkout" method="post" class="checkout woocommerce-checkout" action="<%$smarty.const.ACW_BASE_URL%>cart/update" enctype="multipart/form-data">
                         <div class="row form-checkout">
-                           <div class="col-md-3 col-sm-12 step1">
+                           <div class="col-md-3 col-sm-12 col-xs-12 step1">
                               <div class="heading">
                                  <span class="img-circle icon">1</span>
                                  <span class="text">Thông tin khách hàng</span>
@@ -95,7 +95,7 @@
                                  </div>
                               </div>
                            </div>
-                           <div class="col-md-3 col-sm-12 step2">
+                           <div class="col-md-3 col-sm-12 col-xs-12 step2">
                               <div class="heading">
                                  <span class="img-circle icon">2</span>
                                  <span class="text">Thanh toán</span>
@@ -128,7 +128,7 @@
                                  </div>
                               </div>
                            </div>
-                           <div class="col-md-6 col-sm-12 step3">
+                           <div class="col-md-6 col-sm-12 col-xs-12 step3">
                               <div class="heading">
                                  <span class="icon img-circle">&radic;</span>
                                  <span class="text">Đơn hàng</span>
