--- a/app/template/fontend/template1/include/left.html
+++ b/app/template/fontend/template1/include/left.html
@@ -35,7 +35,7 @@
             </div>
     </div>
     <div class="panel form-face">
-        <div class="fb-page" data-href="https://www.facebook.com/NDNoithatkhachsan/" data-tabs="timeline" data-height="350" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/NDNoithatkhachsan/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/NDNoithatkhachsan/">Danco Hotel Supplies - Sản phẩm vải khách sạn</a></blockquote></div>
+        <div class="fb-page" data-href="<%$facebook_page%>" data-tabs="timeline" data-height="350" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="<%$facebook_page%>" class="fb-xfbml-parse-ignore"><a href="<%$facebook_page%>">Danco Hotel Supplies - Sản phẩm vải khách sạn</a></blockquote></div>
     </div>
     <div class="panel banner-sidebar">
         <div class="panel-body">
